--- a/qmt/index.html
+++ b/qmt/index.html
@@ -151,7 +151,9 @@
           <p class="lead text-light">
             Faciliatate your healing and reclaim your personal power.
           </p>
-          <a href="services.html"><button class="btn btn-primary my-3">Learn More</button></a>
+          <a href="services.html"
+            ><button class="btn btn-primary my-3">Learn More</button></a
+          >
         </div>
       </div>
     </section>
@@ -295,42 +297,149 @@
         <div class="bg-purple my-4">
           <div class="py-lg-4">
             <div class="row m-0 py-4">
-              <div
-                class="col-lg-7 p-0 p-lg-4 d-flex align-items-center order-2 order-lg-1"
-              >
-                <div class="button"><i class="fas fa-chevron-left"></i></div>
-                <div class="testimonials w-100 mx-lg-4">
-                  <div class="bg-light p-4">
-                  <h1><i class="fas fa-quote-left"></i></h1>
-                  <p class="text-center">
-                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Corrupti cum, fuga eveniet blanditiis reiciendis, earum
-                    accusamus deserunt a ea, non dolor labore! Animi culpa
-                    consectetur temporibus commodi eum numquam dignissimos."
-                  </p>
-                  <p class="text-center" style="font-size: 20px;">
-                    – Noelle H.
-                  </p>
-                </div>
-                <div class="testimonials_photos mt-4">
-                  <div class="row text-center d-flex justify-content-center">
-                    <img class="testimonials_img" src="bg.jpg">
-                    <img class="testimonials_img" src="bg.jpg">
-                    <img class="testimonials_img" src="bg.jpg">
-                    <img class="testimonials_img" src="bg.jpg">
-                    <img class="testimonials_img" src="bg.jpg">
+              <div class="col-lg-7 p-0 p-lg-4 order-2 order-lg-1">
+                <div class="testimonials w-100">
+                  <div class="container testimonials pb-4">
+                    <div class="row mb-4 pb-4">
+                      <div
+                        class="card col-md-8 offset-md-2 col-10 offset-1 pb-3"
+                      >
+                        <div
+                          id="carouselExampleIndicators"
+                          class="carousel slide"
+                          data-ride="carousel"
+                        >
+                          <ol class="carousel-indicators order-1">
+                            <li
+                              data-target="#carouselExampleIndicators"
+                              data-slide-to="0"
+                              class="active"
+                            >
+                              <div
+                                class="img-box border rounded-circle m-auto"
+                              >
+                                <img
+                                  class="d-block w-100 rounded-circle"
+                                  src="https://scontent.fsan1-2.fna.fbcdn.net/v/t1.0-9/s960x960/82061034_169155390973528_1428074036054720512_o.jpg?_nc_cat=107&_nc_ohc=a_imRe8gIs4AQmqdEjC-0LoxNUw6dZz8fed7BQ2XiQhiyt40kFBnynttw&_nc_ht=scontent.fsan1-2.fna&_nc_tp=1&oh=e6d25bd40cbf45ab884ed7e64abe4703&oe=5E9BC7AB"
+                                  alt="First slide"
+                                />
+                              </div>
+                            </li>
+                            <li
+                              data-target="#carouselExampleIndicators"
+                              data-slide-to="1"
+                            >
+                              <div
+                                class="img-box border rounded-circle m-auto"
+                              >
+                                <img
+                                  class="d-block w-100 rounded-circle"
+                                  src="https://scontent.fsan1-1.fna.fbcdn.net/v/t1.0-9/p960x960/80277895_10157634558409827_2056414746298548224_o.jpg?_nc_cat=111&_nc_ohc=meBXHt7dKXMAQnvPrfve5dCSdpa-tUFebqboiH3vQquU5qygeaKKCpg-w&_nc_ht=scontent.fsan1-1.fna&_nc_tp=1&oh=9f1b65c9107a8dac0039a83c330dc51e&oe=5EA08585"
+                                  alt="First slide"
+                                />
+                              </div>
+                            </li>
+                            <li
+                              data-target="#carouselExampleIndicators"
+                              data-slide-to="2"
+                            >
+                              <div
+                                class="img-box border rounded-circle m-auto"
+                              >
+                                <img
+                                  class="d-block w-100 rounded-circle"
+                                  src="http://nicesnippets.com/demo/profile-3.jpg"
+                                  alt="First slide"
+                                />
+                              </div>
+                            </li>
+                          </ol>
+                          <div class="carousel-inner p-3">
+                            <div class="carousel-item text-center active">
+                              <p class="m-0 pt-3 text-dark">
+                                This gal is the real deal, y'all. The amount of
+                                effort she puts into what she offers is
+                                astounding. Her delivery is nothing short of
+                                magical, and authenticity radiates from every
+                                word. If you need a solution, she's the one to
+                                help you find it.
+                              </p>
+                              <h5 class="mt-4 mb-0">
+                                <strong class="text-warning text-uppercase"
+                                  >Noelle H.</strong
+                                >
+                              </h5>
+                            </div>
+                            <div class="carousel-item text-center">
+                              <p class="m-0 pt-3 text-dark">
+                                Her reading was amazingly beautiful and
+                                accurate. She really took the time to explain in
+                                great detail what everything meant. What a
+                                talented and beautiful soul she has.
+                              </p>
+                              <h5 class="mt-4 mb-0">
+                                <strong class="text-warning text-uppercase"
+                                  >Sheila T.</strong
+                                >
+                              </h5>
+                            </div>
+                            <div class="carousel-item text-center">
+                              <p class="m-0 pt-3 text-dark">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam eu sem tempor, varius quam
+                                at, luctus dui. Mauris magna metus, dapibus nec
+                                turpis vel, semper malesuada ante. Idac bibendum
+                                scelerisque non non purus. Suspendisse varius
+                                nibh non aliquet.
+                              </p>
+                              <h5 class="mt-4 mb-0">
+                                <strong class="text-warning text-uppercase"
+                                  >Daniel vebar</strong
+                                >
+                              </h5>
+                            </div>
+                          </div>
+                          <a
+                            class="carousel-control-prev"
+                            href="#carouselExampleIndicators"
+                            role="button"
+                            data-slide="prev"
+                          >
+                            <span aria-hidden="true"
+                              ><div class="button">
+                                <i class="fas fa-chevron-left"></i></div
+                            ></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a
+                            class="carousel-control-next"
+                            href="#carouselExampleIndicators"
+                            role="button"
+                            data-slide="next"
+                          >
+                            <span aria-hidden="true">
+                              <span aria-hidden="true"
+                                ><div class="button">
+                                  <i
+                                    class="fas fa-chevron-right"
+                                  ></i></div></span
+                            ></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                </div>
-                <div class="button"><i class="fas fa-chevron-right"></i></div>
               </div>
 
               <div
-                class="col-lg-5 text-white text-center text-lg-left my-2 order-1 d-flex flex-column mt-lg-4"
+                class="col-lg-5 text-white text-center text-lg-left mt-4 order-1 d-flex flex-column mt-lg-4"
               >
                 <h1>DOZENS OF FIVE STAR REVIEWS</h1>
                 <p class="lead text-light">
-                  Read more glowing testimonials <a class="text-muted" href="testimonials.html">here.</a>
+                  Read more glowing testimonials
+                  <a class="text-muted" href="testimonials.html">here.</a>
                 </p>
               </div>
             </div>
@@ -355,6 +464,7 @@
                     readings with tarot I am a blazing my own trail. I emphasize
                     self compassion and personal growth.
                   </p>
+                  <a href="about.html">Read More</a>
                 </div>
                 <div class="col-12 col-lg-4">
                   <img
@@ -438,3 +548,60 @@
     <!-- Footer -->
   </body>
 </html>
+<style>
+  .testimonials h2 {
+    position: relative;
+  }
+  .testimonials h2::after {
+    content: "";
+    width: 130px;
+    position: absolute;
+    margin: 0 auto;
+    height: 3px;
+    background: #07f7ff;
+    left: 0;
+    right: 0;
+    bottom: -10px;
+  }
+  .carousel-inner .carousel-item .img-box {
+    width: 135px;
+    height: 135px;
+  }
+  .carousel-control-prev {
+    left: -100px;
+  }
+  .carousel-control-next {
+    right: -100px;
+  }
+  .carousel-indicators {
+    top: 250px;
+  }
+
+  .carousel-indicators li {
+    background: none;
+  }
+
+  .carousel-indicators .active, .carousel-indicators .active .img-box {
+    width: 60px!important;
+    
+  }
+
+  .text-warning {
+    color: #ed1495 !important;
+  }
+
+  @media (min-width: 320px) and (max-width: 640px) {
+    .carousel-inner .carousel-item p {
+      font-size: 14px;
+    }
+    .carousel-control-prev {
+      left: -40px;
+    }
+    .carousel-control-next {
+      right: -40px;
+    }
+    .carousel-indicators {
+      top: 190px;
+    }
+  }
+</style>
