--- a/qmt/contact.html
+++ b/qmt/contact.html
@@ -175,7 +175,7 @@
                               <textarea rows="5" cols="50" name="message" class="form-control" id="message" placeholder="Message..." tabindex="4" required></textarea>                                 
                           </div>
                           <div class="text-center">
-                              <button type="submit" class="btn btn-light">Send Message</button>
+                              <button type="submit" class="btn btn-primary">Send Message</button>
                           </div>
                       </form>
                   </div>
