--- a/qmt/testimonials.html
+++ b/qmt/testimonials.html
@@ -174,13 +174,125 @@
                 </div>
                 <div class="button"><i class="fas fa-chevron-right"></i></div>
               </div>
-
-              
             </div>
           </div>
         </div>
       </div>
     </section>
+    <div class="container testimonials">
+      <div class="row mb-4 pb-4">
+        <div class="col-md-8 offset-md-2 col-10 offset-1 mt-5">
+          <h2 class="text-center mt-5 mb-5 pb-2 text-uppercase text-dark">
+            <strong>Testimonials</strong>
+          </h2>
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="0"
+                class="active"
+              >
+                <div class="img-box p-1 border rounded-circle m-auto">
+                  <img
+                    class="d-block w-100 rounded-circle"
+                    src="http://nicesnippets.com/demo/profile-3.jpg"
+                    alt="First slide"
+                  />
+                </div>
+              </li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1">
+                <div class="img-box p-1 border rounded-circle m-auto">
+                  <img
+                    class="d-block w-100 rounded-circle"
+                    src="http://nicesnippets.com/demo/profile-3.jpg"
+                    alt="First slide"
+                  />
+                </div>
+              </li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2">
+                <div class="img-box p-1 border rounded-circle m-auto">
+                  <img
+                    class="d-block w-100 rounded-circle"
+                    src="http://nicesnippets.com/demo/profile-3.jpg"
+                    alt="First slide"
+                  />
+                </div>
+              </li>
+            </ol>
+            <div class="carousel-inner mt-4">
+              <div class="carousel-item text-center active">
+                <p class="m-0 pt-3 text-white">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  eu sem tempor, varius quam at, luctus dui. Mauris magna metus,
+                  dapibus nec turpis vel, semper malesuada ante. Idac bibendum
+                  scelerisque non non purus. Suspendisse varius nibh non
+                  aliquet.
+                </p>
+                <h5 class="mt-4 mb-0">
+                  <strong class="text-warning text-uppercase">Noelle H.</strong>
+                </h5>
+              </div>
+              <div class="carousel-item text-center">
+                <p class="m-0 pt-3 text-white">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  eu sem tempor, varius quam at, luctus dui. Mauris magna metus,
+                  dapibus nec turpis vel, semper malesuada ante. Idac bibendum
+                  scelerisque non non purus. Suspendisse varius nibh non
+                  aliquet.
+                </p>
+                <h5 class="mt-4 mb-0">
+                  <strong class="text-warning text-uppercase"
+                    >Steve Fonsi</strong
+                  >
+                </h5>
+              </div>
+              <div class="carousel-item text-center">
+                <p class="m-0 pt-3 text-white">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  eu sem tempor, varius quam at, luctus dui. Mauris magna metus,
+                  dapibus nec turpis vel, semper malesuada ante. Idac bibendum
+                  scelerisque non non purus. Suspendisse varius nibh non
+                  aliquet.
+                </p>
+                <h5 class="mt-4 mb-0">
+                  <strong class="text-warning text-uppercase"
+                    >Daniel vebar</strong
+                  >
+                </h5>
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--------
     - FOOTER -
     --------->
@@ -240,3 +352,52 @@
     <!-- Footer -->
   </body>
 </html>
+
+<style>
+  .testimonials h2 {
+    position: relative;
+  }
+  .testimonials h2::after {
+    content: "";
+    width: 130px;
+    position: absolute;
+    margin: 0 auto;
+    height: 3px;
+    background: #ffc107;
+    left: 0;
+    right: 0;
+    bottom: -10px;
+  }
+  .carousel-inner .carousel-item .img-box {
+    width: 135px;
+    height: 135px;
+  }
+  .carousel-control-prev {
+    left: -100px;
+  }
+  .carousel-control-next {
+    right: -100px;
+  }
+  .carousel-indicators {
+    top: 140px;
+  }
+
+  .carousel-indicators li {
+    background: none;
+  }
+
+  @media (min-width: 320px) and (max-width: 640px) {
+    .carousel-inner .carousel-item p {
+      font-size: 14px;
+    }
+    .carousel-control-prev {
+      left: -40px;
+    }
+    .carousel-control-next {
+      right: -40px;
+    }
+    .carousel-indicators {
+      top: 400px;
+    }
+  }
+</style>
