--- a/qmt/contact.html
+++ b/qmt/contact.html
@@ -43,6 +43,8 @@
     <link rel="icon" type="image/x-icon" href="myfavicon.ico" />
   </head>
   <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0"></script>
     <!------------
     - NAVIGATION -
     ------------->
@@ -149,11 +151,11 @@
             <div class="container">
               <div class="row">
                 <div class="mb-4 mb-md-0 col-sm-12 col-md-6 col-lg-6 col-xs-offset-3">
-                  <p>Feel free to get in touch with me. I am always open to discussing how I can help you meet your spiritual needs and gain the clarity you deserve as you move forward on your path.</p>
-                  <p>For the quickest response, or to book a reading, please connect with me on Facebook.</p>
                   <a href="mailto:queenmachetetarot@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> queenmachetetarot@gmail.com</a>
                   <br><br>
-                  <a href="https://www.facebook.com/queenmachetetarot/" target="_blank"><i class="fab fa-facebook"></i> Find Me on Facebook</a>
+                  <p>Feel free to get in touch with me. I am always open to discussing how I can help you meet your spiritual needs and gain the clarity you deserve as you move forward on your path.</p>
+                  <p>For the quickest response, or to book a reading, please connect with me on Facebook.</p>
+                  <div class="fb-page" data-href="https://www.facebook.com/queenmachetetarot/" data-tabs="messages" data-width="" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/queenmachetetarot/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/queenmachetetarot/">Queen Machete Tarot</a></blockquote></div>
                   
                 </div>
                   <div class="card mt-3 mt-md-0 col-md-6 col-lg-6 col-xs-offset-3">
