--- a/index.html
+++ b/index.html
@@ -137,17 +137,25 @@
       -- HERO SECTION --
       ----------------->
       <section>
-        <div class="m-0">
+        <div class="m-0 pb-4">
           <div class="line-break mb-2"></div>
           <div class="block text-center">
-            <p class="text-left pb-3">
-              <span class="first-character ny">Y</span>ou need a creative
-              partner who can deeply connect with you and understand your
-              vision. We help you tune into your own mystical powers and the
-              soul essence of your business so we can inject that beauty
-              throughout your web design.
-            </p>
-            <button class="border-button">Get a Free Quote</button>
+            <div class="pb-3">
+              <h1 class="cursive-header">Inspired</h1>
+              <h1 class="caption-header lead mb-0 text-uppercase">
+                Digital Solutions
+              </h1>
+              <h1 class="caption-header header-small text-lowercase mb-0 mt-2">
+                Made For
+              </h1>
+              <h1
+                class="cursive-header text-lowercase lead mt-2"
+                style="line-height: 0.75;"
+              >
+                spiritual entrepreneurs.
+              </h1>
+            </div>
+            <button class="border-button my-2">Get a Free Quote</button>
           </div>
 
           <!-- <div class="line-break mt-3"></div> -->
@@ -156,6 +164,64 @@
     </header>
 
     <main>
+      <!--------------------
+      -- SERVICES SECTION --
+      --------------------->
+      <section id="awareness_section bg-white">
+        <div class="py-4 mt-3 mx-auto col-12 col-md-8 w-lg-100">
+          <h2 class="caption-header header-small mb-0 font-weight-bold">
+            We help you connect with your
+            <span
+              class="cursive-header font-weight-normal"
+              style="font-size: 2.25rem;"
+              >soulmate clients.</span
+            >
+          </h2>
+          <p class="mt-2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum
+            sed eveniet nostrum doloremque, ipsum reiciendis earum, adipisci
+            incidunt.
+          </p>
+        </div>
+        <hr class="container-fluid p-0" />
+        <div class="py-2 block text-center container">
+          <div class="row">
+            <div class="audience col-md-4">
+              <i
+                class="fab fa-pagelines display-4 text-center"
+                style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+              ></i>
+              <p class="lead mt-2">
+                Holistic Businesses
+              </p>
+            </div>
+            <div class="audience col-md-4">
+              <i
+                class="fas fa-moon display-4 py-2"
+                style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+              ></i>
+              <p class="lead mt-2">
+                Alternative Practices
+              </p>
+            </div>
+            <div class="audience col-md-4">
+              <i
+                class="fas fa-star display-4 py-2"
+                style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+              ></i>
+              <p class="lead mt-2">
+                Holistic Businesses
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--------------------
       -- SERVICES SECTION --
       --------------------->
