--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           </p>
         </div>
         <hr class="container-fluid p-0" />
-        <div class="p-4 text-center container">
+        <div class="pt-0  px-4 pb-4 pt-md-4 text-center container">
           <div class="row">
             <div class="audience col-md-4">
               <i
