--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
       rgba(241, 241, 241, 0.8) 100%
     ),
     url(/star.png)
-      center center;"
+      center center;
+      background-attachment: fixed;"
     >
       <!--OVERLAY-->
       <div class="img-header header-img">
