--- a/carissa.html
+++ b/carissa.html
@@ -64,15 +64,13 @@
             <p>
               Welcome to your chart! You can click the image to enlarge it. Find
               a brief description of your <em>Big Three</em> placements below.
-              Scroll down a little more for some important events of 2020 and
-              what areas you should expect to see change.
             </p>
             <p class="small">
               <em
-                >Please take this interpretation with a grain of salt as I
-                cannot see the future and everyone will have their own personal
-                interpretation of the planets.</em
-              ><strong>Your fate is forever in your hands. </strong>😊
+                >Please take this interpretation with a grain of salt as
+                everyone will have their own personal interpretation of the
+                planets and their positions.</em
+              ><strong> Your fate is forever in your hands. </strong>😊
             </p>
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -521,7 +519,6 @@
             </div>
           </div>
         </div>
-
       </section>
     </main>
   </body>
