--- a/qmt/testimonials.html
+++ b/qmt/testimonials.html
@@ -166,129 +166,184 @@
                       <div
                         class="col-md-8 offset-md-2 col-10 offset-1 pb-3"
                       >
-                        <div
-                          id="carouselExampleIndicators"
-                          class="carousel slide"
-                          data-ride="carousel"
+                      <div
+                      id="carouselExampleIndicators"
+                      class="carousel slide"
+                      data-ride="carousel"
+                    >
+                      <ol class="carousel-indicators order-1">
+                        <li
+                          data-target="#carouselExampleIndicators"
+                          data-slide-to="0"
+                          class="active"
                         >
-                          <ol class="carousel-indicators order-1">
-                            <li
-                              data-target="#carouselExampleIndicators"
-                              data-slide-to="0"
-                              class="active"
-                            >
-                              <div
-                                class="img-box border rounded-circle m-auto"
-                              >
-                                <img
-                                  class="d-block w-100 rounded-circle"
-                                  src="https://scontent.fsan1-2.fna.fbcdn.net/v/t1.0-9/s960x960/82061034_169155390973528_1428074036054720512_o.jpg?_nc_cat=107&_nc_ohc=a_imRe8gIs4AQmqdEjC-0LoxNUw6dZz8fed7BQ2XiQhiyt40kFBnynttw&_nc_ht=scontent.fsan1-2.fna&_nc_tp=1&oh=e6d25bd40cbf45ab884ed7e64abe4703&oe=5E9BC7AB"
-                                  alt="First slide"
-                                />
-                              </div>
-                            </li>
-                            <li
-                              data-target="#carouselExampleIndicators"
-                              data-slide-to="1"
-                            >
-                              <div
-                                class="img-box border rounded-circle m-auto"
-                              >
-                                <img
-                                  class="d-block w-100 rounded-circle"
-                                  src="https://scontent.fsan1-1.fna.fbcdn.net/v/t1.0-9/p960x960/80277895_10157634558409827_2056414746298548224_o.jpg?_nc_cat=111&_nc_ohc=meBXHt7dKXMAQnvPrfve5dCSdpa-tUFebqboiH3vQquU5qygeaKKCpg-w&_nc_ht=scontent.fsan1-1.fna&_nc_tp=1&oh=9f1b65c9107a8dac0039a83c330dc51e&oe=5EA08585"
-                                  alt="First slide"
-                                />
-                              </div>
-                            </li>
-                            <li
-                              data-target="#carouselExampleIndicators"
-                              data-slide-to="2"
-                            >
-                              <div
-                                class="img-box border rounded-circle m-auto"
-                              >
-                                <img
-                                  class="d-block w-100 rounded-circle"
-                                  src="http://nicesnippets.com/demo/profile-3.jpg"
-                                  alt="First slide"
-                                />
-                              </div>
-                            </li>
-                          </ol>
-                          <div class="carousel-inner p-3">
-                            <div class="carousel-item text-center active">
-                              <p class="m-0 pt-3 text-white">
-                                This gal is the real deal, y'all. The amount of
-                                effort she puts into what she offers is
-                                astounding. Her delivery is nothing short of
-                                magical, and authenticity radiates from every
-                                word. If you need a solution, she's the one to
-                                help you find it.
-                              </p>
-                              <h5 class="mt-4 mb-0">
-                                <strong class="text-warning text-uppercase"
-                                  >Noelle H.</strong
-                                >
-                              </h5>
-                            </div>
-                            <div class="carousel-item text-center">
-                              <p class="m-0 pt-3 text-white">
-                                Her reading was amazingly beautiful and
-                                accurate. She really took the time to explain in
-                                great detail what everything meant. What a
-                                talented and beautiful soul she has.
-                              </p>
-                              <h5 class="mt-4 mb-0">
-                                <strong class="text-warning text-uppercase"
-                                  >Sheila T.</strong
-                                >
-                              </h5>
-                            </div>
-                            <div class="carousel-item text-center">
-                              <p class="m-0 pt-3 text-white">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Nam eu sem tempor, varius quam
-                                at, luctus dui. Mauris magna metus, dapibus nec
-                                turpis vel, semper malesuada ante. Idac bibendum
-                                scelerisque non non purus. Suspendisse varius
-                                nibh non aliquet.
-                              </p>
-                              <h5 class="mt-4 mb-0">
-                                <strong class="text-warning text-uppercase"
-                                  >Daniel vebar</strong
-                                >
-                              </h5>
-                            </div>
+                          <div class="img-box border rounded-circle m-auto">
+                            <img
+                              class="d-block w-100 rounded-circle"
+                              src="https://scontent.fsan1-2.fna.fbcdn.net/v/t1.0-1/p240x240/82295390_10105638380596973_1806364254291361792_o.jpg?_nc_cat=105&_nc_eui2=AeFamLfpUyK5tLQDcyEnhPDa1X0Bk-UfRF2Spcnw0bqL7P04aBPIcSqSk5ejtko9kNjNPgLxBdd7TJJoE__uqO2O_uP7e92rvQcAw1c7CULg8g&_nc_ohc=ZTIGGy37u-sAX_D-zwD&_nc_ht=scontent.fsan1-2.fna&_nc_tp=1002&oh=1bdc9cf3b9e9a0474edc802dcd67a4f7&oe=5EDB3659"
+                              alt="First slide"
+                            />
                           </div>
-                          <a
-                            class="carousel-control-prev"
-                            href="#carouselExampleIndicators"
-                            role="button"
-                            data-slide="prev"
-                          >
-                            <span aria-hidden="true"
-                              ><div class="button">
-                                <i class="fas fa-chevron-left"></i></div
-                            ></span>
-                            <span class="sr-only">Previous</span>
-                          </a>
-                          <a
-                            class="carousel-control-next"
-                            href="#carouselExampleIndicators"
-                            role="button"
-                            data-slide="next"
-                          >
-                            <span aria-hidden="true">
-                              <span aria-hidden="true"
-                                ><div class="button">
-                                  <i
-                                    class="fas fa-chevron-right"
-                                  ></i></div></span
-                            ></span>
-                            <span class="sr-only">Next</span>
-                          </a>
+                        </li>
+                        <li
+                          data-target="#carouselExampleIndicators"
+                          data-slide-to="1"
+                        >
+                          <div class="img-box border rounded-circle m-auto">
+                            <img
+                              class="d-block w-100 rounded-circle"
+                              src="https://scontent.fsan1-2.fna.fbcdn.net/v/t1.0-1/p240x240/71346147_2597691750252150_6716902407936147456_n.jpg?_nc_cat=107&_nc_eui2=AeFLMJxSxY9hpB2XVzQzW5KKBmvtfGCn3014VFaMR72Z3Zb20K6ClV6MUnLvRoE4TR4LY8XORfY5psZOqFLUFMGoWJ0Cs5fzCVjI-t3GabVipw&_nc_ohc=dLJM5AwWm4wAX-bc2p_&_nc_ht=scontent.fsan1-2.fna&_nc_tp=1002&oh=4778ccae97fa1c9846f3a0eddcf2c883&oe=5E961182"
+                              alt="Second slide"
+                            />
+                          </div>
+                        </li>
+                        <li
+                          data-target="#carouselExampleIndicators"
+                          data-slide-to="2"
+                        >
+                          <div class="img-box border rounded-circle m-auto">
+                            <img
+                              class="d-block w-100 rounded-circle"
+                              src="https://scontent.fsan1-1.fna.fbcdn.net/v/t1.0-1/p240x240/67349269_507795749968246_8365515034591232000_n.jpg?_nc_cat=106&_nc_eui2=AeHQIirE8kxyTXDcue2b_w7nnEn7vOJv98_lQPxhzlZLEvfvOUqOtXDpqfCub0B3qsycTruHMsjymOPTCAHp5LVYe_P76RPMHL3K2CZYTp11tg&_nc_ohc=qJrZ_rvXYRgAX8WU1X7&_nc_ht=scontent.fsan1-1.fna&_nc_tp=1002&oh=57e2f88adefdc90fcfeb2dd6f07dd979&oe=5E994972"
+                              alt="Third slide"
+                            />
+                          </div>
+                        </li>
+                        <li
+                          data-target="#carouselExampleIndicators"
+                          data-slide-to="3"
+                        >
+                          <div class="img-box border rounded-circle m-auto">
+                            <img
+                              class="d-block w-100 rounded-circle"
+                              src="https://scontent.fsan1-1.fna.fbcdn.net/v/t1.0-1/c0.0.240.240a/p240x240/58376913_2234423343302952_6011433821747019776_n.jpg?_nc_cat=111&_nc_eui2=AeGnfbRkjEoZdm7Qho3Ua3oIUQJoENsgfk8OkCG5luHCl4Xqkw-t80pwAfTJoUz5nCGOQNKauxX-reDo3VDkdtp-1x_LiN7X_-wqalUqSWx1cQ&_nc_ohc=5KphLgD3I48AX-4K82b&_nc_ht=scontent.fsan1-1.fna&_nc_tp=1003&oh=5a0cbaf2e5c56a53893eb9e96e0d3369&oe=5EA31463"
+                              alt="Fourth slide"
+                            />
+                          </div>
+                        </li>
+                        <li
+                          data-target="#carouselExampleIndicators"
+                          data-slide-to="4"
+                        >
+                          <div class="img-box border rounded-circle m-auto">
+                            <img
+                              class="d-block w-100 rounded-circle"
+                              src="https://scontent.fsan1-2.fna.fbcdn.net/v/t1.0-1/p240x240/83227792_850389682055938_797611770880458752_o.jpg?_nc_cat=100&_nc_eui2=AeH3s35XlPB_AYofnQ09dEqHP8TWIWuQuuZSaYeGjPKEyju_QoYKit7lNl7LNlnW9Aczu9PYzJ0iKlwBD2tH-Cb9ipr3GHFYo2oBGsYDPiWWEA&_nc_ohc=xLWpII43Q5sAX8-4eod&_nc_ht=scontent.fsan1-2.fna&_nc_tp=1002&oh=40d8f3cb3e19a7e87c6463b254cb3a2e&oe=5ED90748"
+                              alt="Fifth slide"
+                            />
+                          </div>
+                        </li>
+                      </ol>
+                      <div class="carousel-inner p-3">
+                        <div class="carousel-item text-center active">
+                          <p class="m-0 pt-3 text-dark">
+                            Joaly is amazing. She gets right to the heart of
+                            your situation and she lays it down for you
+                            straight facts. She doesn’t sugarcoat but she is
+                            definitely thee to help you heal and get out of
+                            your mess. If you’re ready to grow and move
+                            forward you need to book with the QUEEN.
+                          </p>
+                          <h5 class="mt-4 mb-0">
+                            <strong class="text-warning text-uppercase"
+                              >Nikki L.</strong
+                            >
+                          </h5>
                         </div>
+                        <div class="carousel-item text-center">
+                          <p class="m-0 pt-3 text-dark">
+                            One of the most helpful and informative readings
+                            I've ever gotten! She was very thorough and
+                            interpreted the cards with nuance. Her reading
+                            accurately reflected what I've been going
+                            through and gave me much-needed advice. She
+                            doesn't coddle you and just tell you what you
+                            want to hear, she tells you what you NEED to
+                            hear!
+                          </p>
+                          <h5 class="mt-4 mb-0">
+                            <strong class="text-warning text-uppercase"
+                              >Sholani C.</strong
+                            >
+                          </h5>
+                        </div>
+                        <div class="carousel-item text-center">
+                          <p class="m-0 pt-3 text-dark">
+                            By far one of the most experienced cartomancers
+                            I’ve ever come across. She highly intuitive and
+                            very direct. There is no bullsh*t in her game.
+                            I’ve had the honor of having her as a guiding
+                            light in my own practice of the craft. I assure
+                            you every word that leaves her throat chakra has
+                            absolute purpose!
+                          </p>
+                          <h5 class="mt-4 mb-0">
+                            <strong class="text-warning text-uppercase"
+                              >Bradley B.</strong
+                            >
+                          </h5>
+                        </div>
+                        <div class="carousel-item text-center">
+                          <p class="m-0 pt-3 text-dark">
+                            Absolutely so grateful to have found this
+                            beautiful soul! This Queen's reading was filled
+                            with such eye opening knowledge that solidified
+                            I am on the right path! The accuracy brought me
+                            to tears & so much joy! I even got GOOSEBUMPS!!!
+                            I highly recommend anyone to get a reading from
+                            Queen! You will not be disappointed! The
+                            Universe does not lie! 🙏🏽👏🏾💯💜
+                          </p>
+                          <h5 class="mt-4 mb-0">
+                            <strong class="text-warning text-uppercase"
+                              >Barbie S.</strong
+                            >
+                          </h5>
+                        </div>
+                        <div class="carousel-item text-center">
+                          <p class="m-0 pt-3 text-dark">
+                            Joaly is a Tarot Goddess. She is so loving and
+                            truly cares for her clients. She will tell you
+                            the truth in the sweetest way, but with zero
+                            sugar coating. I love her authenticity. She has
+                            helped me tremendously & I highly recommend her
+                            services.
+                          </p>
+                          <h5 class="mt-4 mb-0">
+                            <strong class="text-warning text-uppercase"
+                              >Týra A.</strong
+                            >
+                          </h5>
+                        </div>
+                      </div>
+                      <a
+                        class="carousel-control-prev"
+                        href="#carouselExampleIndicators"
+                        role="button"
+                        data-slide="prev"
+                      >
+                        <span aria-hidden="true"
+                          ><div class="button">
+                            <i class="fas fa-chevron-left"></i></div
+                        ></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a
+                        class="carousel-control-next"
+                        href="#carouselExampleIndicators"
+                        role="button"
+                        data-slide="next"
+                      >
+                        <span aria-hidden="true">
+                          <span aria-hidden="true"
+                            ><div class="button">
+                              <i
+                                class="fas fa-chevron-right"
+                              ></i></div></span
+                        ></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
                       </div>
                     </div>
                   </div>
